--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "sequelize": "^6.3.5"
   },
